--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 
 .content {
-  height: 75%;
+  height: 80%;
   color: white;
   background-color: black;
   justify-content: center;
@@ -32,7 +32,7 @@
 .info {
   background-color: black;
   color: white;
-  height: 10%;
+  min-height: 5%;
   justify-content: center;
   align-items: center;
 }
