--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,14 @@
 
 .bottom-row {
   background-color: #efc327;
-  height: 5%;
+  min-height: 5%;
   justify-content: center;
   align-items: center;
 }
 
 .bottom-row p {
   font-weight: bold;
+  font-size: 2vmin;
 }
 
 .up-row {
@@ -35,11 +36,13 @@
   min-height: 5%;
   justify-content: center;
   align-items: center;
+  padding: 3rem 0;
 }
 
 .info p {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 3vmin;
+  text-align: center;
 }
 
 .logo {
@@ -53,7 +56,7 @@
 
 .links p {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 3vmin;
 }
 
 .my-col {
